CSS fixes (hide overflow, sprites interactable)

--- a/public/scripts/extensions/expressions/style.css
+++ b/public/scripts/extensions/expressions/style.css
@@ -109,6 +109,7 @@ img.expression.default {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 
 .expression_list_title {
